@@ -1,139 +1,135 @@
 package martian.arcane.datagen.builders;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
-import martian.arcane.api.ListHelpers;
 import martian.arcane.api.recipe.RecipeOutput;
-import martian.arcane.common.registry.ArcaneRecipeTypes;
+import martian.arcane.common.recipe.RecipePedestalCrafting;
+import martian.arcane.datagen.util.RecipeDataHelper;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.advancements.Advancement;
-import net.minecraft.advancements.CriterionTriggerInstance;
-import net.minecraft.advancements.RequirementsStrategy;
+import net.minecraft.advancements.AdvancementRequirements;
+import net.minecraft.advancements.Criterion;
 import net.minecraft.advancements.critereon.RecipeUnlockedTrigger;
 import net.minecraft.core.NonNullList;
-import net.minecraft.data.recipes.FinishedRecipe;
 import net.minecraft.data.recipes.RecipeBuilder;
 import net.minecraft.data.recipes.RecipeCategory;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.RecipeSerializer;
+import net.minecraft.world.level.ItemLike;
+import org.jetbrains.annotations.Nullable;
 
-import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
-import java.util.function.Consumer;
 
 @ParametersAreNonnullByDefault
 @MethodsReturnNonnullByDefault
 public class PedestalRecipeBuilder implements RecipeBuilder {
-    private final Advancement.Builder advancement = Advancement.Builder.recipeAdvancement();
-    private @javax.annotation.Nullable String group;
-    private final RecipeCategory category;
-    private final RecipeSerializer<?> type;
-    private final Ingredient input;
-    private final Ingredient interactionInput;
-    private final boolean consume;
-    private final NonNullList<RecipeOutput.DataGenHolder> results;
+    public Advancement.Builder advancement = Advancement.Builder.recipeAdvancement();
+    public RecipeCategory category;
+    public @Nullable String group;
+    public Ingredient input;
+    public Ingredient interactionInput;
+    public boolean consume;
+    public NonNullList<RecipeOutput> results = NonNullList.create();
 
-    public PedestalRecipeBuilder(RecipeCategory category, RecipeSerializer<?> type, Ingredient input, Ingredient interactionItem, boolean consume, NonNullList<RecipeOutput.DataGenHolder> results) {
+    private PedestalRecipeBuilder() {}
+
+    public PedestalRecipeBuilder setCategory(RecipeCategory category) {
         this.category = category;
-        this.type = type;
+        return this;
+    }
+
+    public PedestalRecipeBuilder setInput(Ingredient input) {
         this.input = input;
-        this.interactionInput = interactionItem;
-        this.consume = consume;
-        this.results = results;
+        return this;
     }
 
-    public static PedestalRecipeBuilder pedestalCrafting(Ingredient input, Ingredient interactionInput, boolean consume, NonNullList<RecipeOutput.DataGenHolder> results) {
-        return new PedestalRecipeBuilder(RecipeCategory.MISC, ArcaneRecipeTypes.PEDESTAL_SERIALIZER.get(), input, interactionInput, consume, results);
+    public PedestalRecipeBuilder setInteractionInput(Ingredient input, boolean consumed) {
+        this.interactionInput = input;
+        this.consume = consumed;
+        return this;
     }
 
-    public static PedestalRecipeBuilder simpleRecipe(Ingredient input, Ingredient interactionInput, RecipeOutput.DataGenHolder output) {
-        return pedestalCrafting(input, interactionInput, true, ListHelpers.nonNullListOf(output));
+    public PedestalRecipeBuilder addResult(RecipeOutput result) {
+        this.results.add(result);
+        return this;
     }
 
-    public static PedestalRecipeBuilder simpleRecipe(Ingredient input, Ingredient interactionInput, Item output, int count) {
-        return simpleRecipe(input, interactionInput, new RecipeOutput.DataGenHolder(output, count, 1));
+    public PedestalRecipeBuilder addResult(ItemStack stack) {
+        return addResult(new RecipeOutput(stack, 1));
+    }
+
+    public PedestalRecipeBuilder addResult(ItemStack stack, float chance) {
+        return addResult(new RecipeOutput(stack, chance));
+    }
+
+    public PedestalRecipeBuilder addResult(Item item, int count, float chance) {
+        return addResult(new RecipeOutput(item, count, chance));
+    }
+
+    public PedestalRecipeBuilder addResult(Item item, int count) {
+        return addResult(new RecipeOutput(item, count, 1));
+    }
+
+    public PedestalRecipeBuilder addResult(Item item) {
+        return addResult(new RecipeOutput(item, 1, 1));
+    }
+
+    public PedestalRecipeBuilder unlockedBy(String criterionName, Criterion criterion) {
+        this.advancement.addCriterion(criterionName, criterion);
+        return this;
+    }
+
+    public PedestalRecipeBuilder unlockedWith(ItemLike item) {
+        this.advancement.addCriterion("has_item", RecipeDataHelper.has(item));
+        return this;
+    }
+
+    public PedestalRecipeBuilder unlockedWith(TagKey<Item> item) {
+        this.advancement.addCriterion("has_item", RecipeDataHelper.has(item));
+        return this;
+    }
+
+    @Override
+    public RecipeBuilder group(@Nullable String group) {
+        this.group = group;
+        return this;
     }
 
     public Item getResult() {
-        return results.get(0).item();
+        return results.getFirst().getStack().getItem();
     }
 
-    public PedestalRecipeBuilder unlockedBy(String criterionName, CriterionTriggerInstance criterionTrigger) {
-        this.advancement.addCriterion(criterionName, criterionTrigger);
-        return this;
+    public void save(net.minecraft.data.recipes.RecipeOutput recipeOutput, ResourceLocation recipeId) {
+        this.advancement
+                .addCriterion("has_the_recipe", RecipeUnlockedTrigger.unlocked(recipeId))
+                .rewards(net.minecraft.advancements.AdvancementRewards.Builder.recipe(recipeId))
+                .requirements(AdvancementRequirements.Strategy.OR);
+
+        recipeOutput.accept(
+                recipeId,
+                new RecipePedestalCrafting(input, interactionInput, consume, results),
+                this.advancement.build(recipeId.withPrefix("recipes/"))
+        );
     }
 
-    public PedestalRecipeBuilder group(@Nullable String groupName) {
-        this.group = groupName;
-        return this;
+    public void save(RecipeDataHelper helper, ResourceLocation id) {
+        helper.wrap(this).save(id);
     }
 
-    public void save(Consumer<FinishedRecipe> finishedRecipeConsumer, ResourceLocation recipeId) {
-        this.ensureValid(recipeId);
-        this.advancement.parent(ROOT_RECIPE_ADVANCEMENT).addCriterion("has_the_recipe", RecipeUnlockedTrigger.unlocked(recipeId)).rewards(net.minecraft.advancements.AdvancementRewards.Builder.recipe(recipeId)).requirements(RequirementsStrategy.OR);
-        finishedRecipeConsumer.accept(new PedestalRecipeBuilder.Result(recipeId, this.type, this.group == null ? "" : this.group, this.input, this.interactionInput, this.consume, this.results, this.advancement, recipeId.withPrefix("recipes/" + this.category.getFolderName() + "/")));
+    public void save(RecipeDataHelper helper) {
+        helper.wrap(this).save();
     }
 
-    private void ensureValid(ResourceLocation id) {
-        if (this.advancement.getCriteria().isEmpty()) {
-            throw new IllegalStateException("No way of obtaining recipe " + id);
-        }
+    public static PedestalRecipeBuilder pedestalCrafting() {
+        return new PedestalRecipeBuilder();
     }
 
-    public static class Result implements FinishedRecipe {
-        private final ResourceLocation id;
-        private final String group;
-        private final Ingredient input;
-        private final Ingredient interactionInput;
-        private final boolean consume;
-        private final NonNullList<RecipeOutput.DataGenHolder> results;
-        private final Advancement.Builder advancement;
-        private final ResourceLocation advancementId;
-        private final RecipeSerializer<?> type;
+    public static PedestalRecipeBuilder simpleRecipe(Ingredient input, Ingredient interactionInput, RecipeOutput output) {
+        return pedestalCrafting().setInput(input).setInteractionInput(interactionInput, true).addResult(output);
+    }
 
-        public Result(ResourceLocation id, RecipeSerializer<?> type, String group, Ingredient input, Ingredient interactionInput, boolean consume, NonNullList<RecipeOutput.DataGenHolder> results, Advancement.Builder advancement, ResourceLocation advancementId) {
-            this.id = id;
-            this.type = type;
-            this.group = group;
-            this.input = input;
-            this.interactionInput = interactionInput;
-            this.consume = consume;
-            this.results = results;
-            this.advancement = advancement;
-            this.advancementId = advancementId;
-        }
-
-        public void serializeRecipeData(JsonObject json) {
-            if (!this.group.isEmpty())
-                json.addProperty("group", this.group);
-
-            json.add("input", this.input.toJson());
-            json.add("interaction_input", this.interactionInput.toJson());
-            json.addProperty("consume", this.consume);
-
-            JsonArray jsonResults = new JsonArray();
-            results.forEach(result -> jsonResults.add(result.toRecipeOutput().toJson()));
-            json.add("results", jsonResults);
-        }
-
-        public ResourceLocation getId() {
-            return this.id;
-        }
-
-        public RecipeSerializer<?> getType() {
-            return this.type;
-        }
-
-        @Nullable
-        public JsonObject serializeAdvancement() {
-            return this.advancement.serializeToJson();
-        }
-
-        @Nullable
-        public ResourceLocation getAdvancementId() {
-            return this.advancementId;
-        }
+    public static PedestalRecipeBuilder simpleRecipe(Ingredient input, Ingredient interactionInput, Item output, int count) {
+        return simpleRecipe(input, interactionInput, new RecipeOutput(new ItemStack(output, count), 1));
     }
 }
